--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FonoClinic - Gerenciamento de Consultas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="container">
@@ -13,61 +12,78 @@
             <h1>FonoClinic - Gerenciamento de Consultas</h1>
         </header>
 
-        <!-- Formulário horizontal com molduras -->
-        <form id="consultaForm" class="formulario-horizontal">
+        <!-- Formulário de cadastro estilo Google Forms -->
+        <form id="consultaForm" class="formulario-google-forms">
             <h2>Cadastro de Paciente</h2>
 
-            <!-- Grupo de informações principais -->
+            <!-- Campos do formulário em layout horizontal com retângulos -->
             <div class="grupo-campos">
-                <label for="nomePaciente">Nome do Paciente</label>
-                <input type="text" id="nomePaciente" name="nomePaciente" placeholder="Nome do paciente" required>
+                <div class="campo">
+                    <label for="nomePaciente">Nome do Paciente</label>
+                    <input type="text" id="nomePaciente" name="nomePaciente" placeholder="Digite o nome do paciente" required>
+                </div>
 
-                <label for="responsavel">Responsável</label>
-                <input type="text" id="responsavel" name="responsavel" placeholder="Nome do responsável" required>
+                <div class="campo">
+                    <label for="responsavel">Responsável</label>
+                    <input type="text" id="responsavel" name="responsavel" placeholder="Nome do responsável" required>
+                </div>
             </div>
 
-            <!-- Grupo de informações adicionais -->
             <div class="grupo-campos">
-                <label for="idade">Idade</label>
-                <input type="number" id="idade" name="idade" placeholder="Idade do paciente" required>
+                <div class="campo">
+                    <label for="idade">Idade</label>
+                    <input type="number" id="idade" name="idade" placeholder="Digite a idade" required>
+                </div>
 
-                <label for="telefone">Número de Telefone</label>
-                <input type="tel" id="telefone" name="telefone" placeholder="Telefone de contato" required>
+                <div class="campo">
+                    <label for="telefone">Número de Telefone</label>
+                    <input type="tel" id="telefone" name="telefone" placeholder="Digite o telefone" required>
+                </div>
             </div>
 
-            <!-- Grupo de consulta -->
             <div class="grupo-campos">
-                <label for="especialidade">Especialidade</label>
-                <input type="text" id="especialidade" name="especialidade" placeholder="Especialidade" required>
+                <div class="campo">
+                    <label for="especialidade">Especialidade</label>
+                    <select id="especialidade" name="especialidade">
+                        <option value="Fonoaudiologia">Fonoaudiologia</option>
+                        <option value="Psicologia">Psicologia</option>
+                        <option value="Fisioterapia">Fisioterapia</option>
+                    </select>
+                </div>
 
-                <label for="consultorio">Consultório</label>
-                <input type="text" id="consultorio" name="consultorio" placeholder="Consultório" required>
+                <div class="campo">
+                    <label for="consultorio">Consultório</label>
+                    <input type="text" id="consultorio" name="consultorio" placeholder="Número do consultório" required>
+                </div>
             </div>
 
-            <!-- Grupo de data e horário -->
             <div class="grupo-campos">
-                <label for="dataConsulta">Data da Consulta</label>
-                <input type="date" id="dataConsulta" name="dataConsulta" required>
+                <div class="campo">
+                    <label for="dataConsulta">Data da Consulta</label>
+                    <input type="date" id="dataConsulta" name="dataConsulta" required>
+                </div>
 
-                <label for="horarioConsulta">Horário da Consulta</label>
-                <input type="time" id="horarioConsulta" name="horarioConsulta" required>
+                <div class="campo">
+                    <label for="horarioConsulta">Horário da Consulta</label>
+                    <input type="time" id="horarioConsulta" name="horarioConsulta" required>
+                </div>
             </div>
 
-            <!-- Botão de salvar -->
+            <!-- Botão para salvar a consulta -->
             <div class="grupo-campos">
                 <button type="submit" class="btn-principal">Salvar Consulta</button>
             </div>
         </form>
 
-        <!-- Botões de navegação -->
+        <!-- Botões de navegação para consultar dados -->
         <div class="botoes-secundarios">
             <button id="btnHoje" class="btn-secundario">Consultas de Hoje</button>
             <button id="btnConsultasMes" class="btn-secundario">Consultas por Mês</button>
         </div>
 
-        <!-- Áreas para exibir consultas -->
-        <section id="consultasDia" class="resultado-consultas"></section>
-        <section id="consultasMes" class="resultado-consultas"></section>
+        <!-- Exibição de consultas -->
+        <section id="consultasResumo" class="resultado-consultas"></section>
+
     </div>
 
     <script src="script.js"></script>
